Manager fixes and documentation
