# routes/api.php
@@ -6,8 +6,8 @@ Route::middleware('auth:api')->group(function () {
         Route::get('admin/restaurants', 'Admin\RestaurantController@index');
         Route::get('admin/users', 'Admin\UserController@index');
         Route::get('admin/orders', 'Admin\OrderController@index');
-        Route::patch('admin/restaurant/{id}/publish', 'Admin\RestaurantController@publish');
-        Route::patch('admin/restaurant/{id}/hide', 'Admin\RestaurantController@hide');
+        Route::post('admin/restaurant/{id}/publish', 'Admin\RestaurantController@publish');
+        Route::post('admin/restaurant/{id}/hide', 'Admin\RestaurantController@hide');
     });
     Route::get('admin/ingredients', 'Admin\IngredientController@index');
 
@@ -17,8 +17,6 @@ Route::middleware('auth:api')->group(function () {
 
     Route::post('restaurant/{id}/pizza', 'MainRestaurant\PizzaController@store');
     Route::delete('pizza/{id}', 'MainRestaurant\PizzaController@destroy');
-    Route::post('pizza/{pizza_id}/attach', 'MainRestaurant\PizzaController@attach');
-    Route::post('pizza/{pizza_id}/detach', 'MainRestaurant\PizzaController@detach');
 
     Route::post('ingredient', 'MainRestaurant\IngredientController@store');
     Route::patch('ingredient/{id}', 'MainRestaurant\IngredientController@update');
@@ -30,12 +28,12 @@ Route::middleware('auth:api')->group(function () {
     Route::post('order', 'Order\OrderController@placeOrder');
     Route::get('order/{token}', 'Order\OrderController@show');
     Route::post('order/{token}/status/next', 'Order\OrderController@setNextStatus');
-    Route::get('restaurant/{id}/orders', 'Order\OrderController@restaurantOrders');
+    Route::get('restaurant/{id}/orders', 'Order\OrderController@restaurantOrders'); 
 
-    Route::post('restaurant/{id}/grant', 'MainRestaurant\RestaurantOwnerController@grant');
-    Route::delete('restaurant/{id}/revoke/{user_id}', 'MainRestaurant\RestaurantOwnerController@revoke');
-    Route::patch('restaurant/{id}/request', 'MainRestaurant\RestaurantOwnerController@request');
-    Route::patch('restaurant/{id}/cancel', 'MainRestaurant\RestaurantOwnerController@cancel');
+    Route::post('restaurant/{id}/grant', 'MainRestaurant\RestaurantOwnerController@grant'); 
+    Route::delete('restaurant/{id}/revoke/{user_id}', 'MainRestaurant\RestaurantOwnerController@revoke'); 
+    Route::post('restaurant/{id}/publish/request', 'MainRestaurant\RestaurantOwnerController@request');
+    Route::post('restaurant/{id}/publish/cancel', 'MainRestaurant\RestaurantOwnerController@cancel');
 
     Route::post('restaurant/{id}/manage', 'MainRestaurant\RestaurantManagerController@manage');
 });
